--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = "^3.12"
 dependencies = [
     "fastapi[standard] (>=0.134.0,<0.135.0)",
-    "sqlalchemy (>=2.0.47,<3.0.0)"
+    "sqlalchemy (>=2.0.47,<3.0.0)",
+    "ipykernel (>=7.2.0,<8.0.0)",
+    "alembic (>=1.18.4,<2.0.0)"
 ]
 
 
